modal error correction

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -3,7 +3,7 @@
     <div class="card">
       <div class="card-body">
         <h4 class="text-center p-4">
-          <span class="text-primary">Register</span>
+          <span class="text-primary">Register With SG Bank</span>
         </h4>
         <form (ngsubmit)="register()" [formGroup]="registerForm" novalidate>
           <div *ngIf="signupSuccessMsg" class="alert alert-success" role="alert">
