--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,11 +6,17 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarMain">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
+        <li *ngIf="!loggedIn" class="nav-item">
           <a routerLink="/login" class="nav-link">Login</a>
         </li>
-        <li class="nav-item">
+        <li *ngIf="!loggedIn" class="nav-item">
           <a routerLink="/register" class="nav-link">Register</a>
+        </li>
+        <li *ngIf="loggedIn" class="nav-item">
+          <a class="nav-link">Welcome {{ currentUser?.username | titlecase }}</a>
+        </li>
+        <li *ngIf="loggedIn" class="nav-item">
+          <a (click)="logout()" class="nav-link">Logout</a>
         </li>
       </ul>
     </div>
