--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="row mt-5">
   <div class="col-md-6 mx-auto">
-    <div class="card">
+    <div class="card mt-5">
       <div class="card-body">
         <h4 class="text-center p-4">
           <span class="text-primary">Welcome To SG Bank Login</span>
