--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-primary mb-4">
+<nav class="navbar fixed-top navbar-expand-md navbar-dark bg-primary mb-4">
   <div class="container">
     <a class="navbar-brand" style="color:#fff;">SG Bank</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMain">
