--- a/src/app/components/deposit/deposit.component.html
+++ b/src/app/components/deposit/deposit.component.html
@@ -1,3 +1,39 @@
-<p class="text-center mt-5 mb-5 p-3">
-  deposit works!
-</p>
+<div fxLayout="column">
+  <div class="h1 mt-5">Deposit</div>
+</div>
+
+<div class="mt-3 mb-4">
+  <button type="button" mat-flat-button color="primary" (click)="makeDeposit()">Make Deposit</button>
+</div>
+
+<h3 class="mb-5 mt-5">Total Available Balance is {{ currentUserBalance | currency: 'EUR' }}</h3>
+
+<div class="m-3">
+
+  <div *ngIf="depositAddedMsg" class="alert alert-success" role="alert">
+    Deposit added successfully
+  </div>
+
+  <table *ngIf="totalDeposits != 0" mat-table [dataSource]="deposits" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef>Creation Date</th>
+      <td mat-cell *matCellDef="let element">{{ element.creationDate | date: 'dd/MM/yyyy, HH:mm' }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="amount">
+      <th mat-header-cell *matHeaderCellDef>Amount Deposited</th>
+      <td mat-cell *matCellDef="let element">
+        <span style="color:green;font-weight: bolder"> + </span>{{ element.amount | currency:'EUR'}}
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <mat-paginator *ngIf="totalDeposits != 0" (page)="pageChanged($event)" [pageSize]="pageEvent.pageSize"
+    [length]="totalDeposits" [pageSizeOptions]="[10,15,20,50]" [showFirstLastButtons]="true"></mat-paginator>
+
+  <div *ngIf="totalDeposits == 0" style="font-weight: bold;" class="text-center">You have not yet deposited any money in
+    your account.</div>
+</div>
