--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
           <a class="nav-link" style="color:#fff;">Welcome {{ currentUser?.username | titlecase }}</a>
         </li>
         <li *ngIf="loggedIn" class="nav-item">
-          <a (click)="logout()" class="nav-link" style="color:#fff;">Logout</a>
+          <a (click)="logout()" class="nav-link" style="color:#fff;cursor: pointer;">Logout</a>
         </li>
       </ul>
     </div>
