--- a/src/app/components/withdrawal/withdrawal.component.html
+++ b/src/app/components/withdrawal/withdrawal.component.html
@@ -1,3 +1,40 @@
-<p class="text-center mt-5 mb-5 p-3">
-  withdrawal works!
-</p>
+<div fxLayout="column">
+  <div class="h1 mt-5">Withdraw Money</div>
+</div>
+
+<div class="mt-3 mb-4">
+  <button type="button" mat-flat-button color="primary" (click)="withdraw()">Withdraw Money</button>
+</div>
+
+<h3 class="mb-5 mt-5">Total Available Balance is {{ currentUserBalance | currency: 'EUR' }}</h3>
+
+<div class="m-3">
+
+  <div *ngIf="withdrawnAddedMsg" class="alert alert-success" role="alert">
+    Money was withdrawn successfully from your account
+  </div>
+
+  <table *ngIf="totalWithdrawns != 0" mat-table [dataSource]="withdrawals" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef>Creation Date</th>
+      <td mat-cell *matCellDef="let element">{{ element.creationDate | date: 'dd/MM/yyyy, HH:mm' }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="amount">
+      <th mat-header-cell *matHeaderCellDef>Amount Withdrawn</th>
+      <td mat-cell *matCellDef="let element">
+        <span style="color:red;font-weight: bolder"> - </span>{{ element.amount | currency:'EUR'}}
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <mat-paginator *ngIf="totalWithdrawns != 0" (page)="pageChanged($event)" [pageSize]="pageEvent.pageSize"
+    [length]="totalWithdrawns" [pageSizeOptions]="[10,15,20,50]" [showFirstLastButtons]="true"></mat-paginator>
+
+  <div *ngIf="totalWithdrawns == 0" style="font-weight: bold;" class="text-center">You have not yet withdrawn any money
+    from
+    your account.</div>
+</div>
