--- a/src/app/components/deposit/deposit-modal/deposit-modal.component.html
+++ b/src/app/components/deposit/deposit-modal/deposit-modal.component.html
@@ -5,10 +5,14 @@
     </div>
 
     <mat-dialog-content fxLayout="column" class="mr-3">
+      <div *ngIf="invalidAmount" class="alert alert-danger" role="alert">
+        Please enter an amount greater then 0.
+      </div>
       <div fxLayout="column">
-        <mat-form-field fxFlex="100">
+        <mat-form-field fxFlex="100" class="mt-3">
           <input formControlName="deposit" type="number" matInput
-            placeholder="Enter amount to be deposited in your account." [(ngModel)]="deposit.amount" required>
+            placeholder="Enter amount to be deposited in your account. Ex: 100 or 120.50" [(ngModel)]="deposit.amount"
+            required>
           <mat-error *ngIf="getFormControls['deposit'].errors?.required">
             Required
           </mat-error>
