--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,10 +2,9 @@
   Welcome To SG Bank
 </h3>
 
-<h3>Your Total Balance is {{ currentUser?.balance | currency: 'EUR'}} </h3>
-
 <div class="container mt-5">
-  <div class="row">
+  <h3>Your Total Balance is {{ currentUser?.balance | currency: 'EUR'}} </h3>
+  <div class="row mt-5">
 
     <div class="col-sm-4">
       <div class="card text-center cardBody">
