--- a/src/app/components/deposit/deposit-modal/deposit-modal.component.html
+++ b/src/app/components/deposit/deposit-modal/deposit-modal.component.html
@@ -23,7 +23,9 @@
     <mat-dialog-actions fxLayout="row" fxLayoutAlign="end center">
       <button mat-flat-button color="warn" mat-dialog-close type="button" class="mr-2">Cancel</button>
       <button mat-flat-button color="primary" type="submit" [disabled]="depositForm.invalid || loading">Deposit
-        <mat-spinner [diameter]="20" *ngIf="loading"></mat-spinner>
+        <mat-icon *ngIf="loading">
+          <mat-spinner diameter="20"></mat-spinner>
+        </mat-icon>
       </button>
     </mat-dialog-actions>
   </div>
