--- a/src/app/components/history/history.component.html
+++ b/src/app/components/history/history.component.html
@@ -5,7 +5,11 @@
 <div class="mt-3 mb-4">
   <button type="button" [disabled]="totalHistories == 0 || loading" mat-flat-button color="primary"
     (click)="downloadStatement()">Print
-    Statement</button>
+    Statement
+    <mat-icon *ngIf="loading">
+      <mat-spinner diameter="20"></mat-spinner>
+    </mat-icon>
+  </button>
 </div>
 
 <h3 class="mb-5 mt-5">Total Available Balance is {{ currentUserBalance | currency: 'EUR' }}</h3>
