--- a/src/app/components/withdrawal/withdrawal-modal/withdrawal-modal.component.html
+++ b/src/app/components/withdrawal/withdrawal-modal/withdrawal-modal.component.html
@@ -3,11 +3,21 @@
     <div matDialogTitle class="mat-accent m-0">
       <h4>Withdraw Money</h4>
     </div>
-
+    <button
+      class="mt-2 mb-2"
+      mat-flat-button
+      color="primary"
+      type="button"
+      *ngIf="currentUserBalance > 0"
+      (click)="withdrawAllSavings()"
+    >
+      Withdraw All Savings
+    </button>
     <mat-dialog-content fxLayout="column" class="mr-3">
       <div *ngIf="cannotWithdrawMsg" class="alert alert-danger" role="alert">
-        You cannot withdraw {{ withdraw.amount | currency:'EUR' }}, because your total balance is
-        {{ currentUserBalance | currency: 'EUR' }}
+        You cannot withdraw {{ withdraw.amount | currency: "EUR" }}, because
+        your total balance is
+        {{ currentUserBalance | currency: "EUR" }}
       </div>
 
       <div *ngIf="invalidAmount" class="alert alert-danger" role="alert">
@@ -16,9 +26,14 @@
 
       <div fxLayout="column">
         <mat-form-field fxFlex="100" class="mt-3">
-          <input formControlName="withdrawal" type="number" matInput
-            placeholder="Enter amount to be withdrawn from your account. Ex: 10 or 20.50" [(ngModel)]="withdraw.amount"
-            required>
+          <input
+            formControlName="withdrawal"
+            type="number"
+            matInput
+            placeholder="Enter amount to be withdrawn from your account. Ex: 10 or 20.50"
+            [(ngModel)]="withdraw.amount"
+            required
+          />
           <mat-error *ngIf="getFormControls['withdrawal'].errors?.required">
             Required
           </mat-error>
@@ -27,9 +42,22 @@
     </mat-dialog-content>
 
     <mat-dialog-actions fxLayout="row" fxLayoutAlign="end center">
-      <button mat-flat-button color="warn" mat-dialog-close type="button" class="mr-2">Cancel</button>
-      <button mat-flat-button color="primary" type="submit" [disabled]="withdrawalForm.invalid || loading">Withdraw
-        Money
+      <button
+        mat-flat-button
+        color="warn"
+        mat-dialog-close
+        type="button"
+        class="mr-2"
+      >
+        Cancel
+      </button>
+      <button
+        mat-flat-button
+        color="primary"
+        type="submit"
+        [disabled]="withdrawalForm.invalid || loading"
+      >
+        Withdraw Money
         <mat-icon *ngIf="loading">
           <mat-spinner diameter="20"></mat-spinner>
         </mat-icon>
